--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Bomberman.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jade.jar=/home/cristopherson/jade/jade/lib/jade.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jade.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
